...
    <string name="fullNameSignUpHint">Name Surname</string>
    <string name="phoneNumberSignUpHint">Phone Number</string>
    <string name="passSignUpHint">Password</string>
    <string name="signUpButtonLabel">Sign Up</string>
    <string name="sendButtonLabelForgotPass">Send</string>
    <string name="passLoginHint">Password</string>
    <string name="forgotPass"><u>Forgot password?</u></string>
    <string name="loginButtonLabel">Login</string>
    <string name="signUpText">Don’t have an account? <b><u>Sign Up!</u></b></string>
    <string name="fashionLoginLabel">Fashion is waiting for you</string>
    <string name="changePassText">Do you want to change your pass? <b><u>Click!</u></b></string>
    <string name="saveProfileButtonLabel">Save</string>
    <string name="market_bottom_nav_menu">Market</string>
    <string name="liked_bottom_nav_menu">Liked</string>
    <string name="stuff_bottom_nav_menu">Stuff</string>
    <string name="profile_bottom_nav_menu">Profile</string>
    <string name="logout_bottom_nav_menu">Logout</string>
    <string name="newPasswordChangePasswordHint">Current Password</string>
    <string name="repeatPasswordChangePasswordHint">New Password</string>
    <string name="changePasswordButtonLabel">Save</string>
    <string name="productNameProductDetailText">Producto1</string>
    <string name="productPriceProductDetailText">20,00$</string>
    <string name="nameSurnameProductDetailText">Name Surname</string>
...
